--- a/Presentation.tex
+++ b/Presentation.tex
@@ -104,24 +104,20 @@
 \end{frame}
 % frame 2
 \begin{frame}{Cavendish apparatus}
-\framesubtitle{Setup}
+\framesubtitle{Cavendish apparatus}
 	\begin{center}		
 		\includegraphics[width=0.25\textwidth,keepaspectratio]{Cavendish apparatus.PNG}
     \end{center}
 	\begin{itemize}
 		\item Cavendish apparatus measures the test mass $M$ gravitational torque using a torsional pendulum.
 		\pause
-		\item Mass $M$ attracts both masses $m$; creating a net gravitational torques.
+		\item Mass $M$ attracts both masses $m$; creating a net gravitational torque.
 		\item There are both gravitational torque and a restoring torque.
 		\item The average equilibrium angle: $\overline{\theta} = \frac{\tau_g}{\kappa} \approx \frac{3GT^2cos\theta sin\theta}{4\pi^2 } \cdot \frac{M}{r_0^3}$.
 
-
-		%\item The pendulum can be assumed to consist of two masses $m$ connected by a rigid, massless thin rod, with length of $2l$, and a pivot point at distance $l$ from each mass.
-		\pause
-		%\item The mass $M$, located at distance $r_0$ from the pivot point attracts the two masses and creates gravitational torques.
 	\end{itemize}
 \end{frame}
-% frame 3
+% frame 3 - skip
 \begin{frame}{Cavendish apparatus}
 \framesubtitle{Measurement}
 	\begin{center}		
@@ -129,12 +125,11 @@
     \end{center}
 	\begin{itemize}
 		\item The net gravitational torque is the sum of the two torques, one from each mass: $\tau_g = l \cdot F(r_1) \cdot cos\theta_1 - l \cdot F(r_2) \cdot cos\theta_2$
-		\pause
 		\item If $l<<d,x,r_0$ the net torque can be approximated to: $\tau_g =  \frac{6l^2GmMxd} {r_0^5} = \frac{6l^2GmM sin\theta cos\theta}{r_0^3}$
 		\item Where $\theta$ is the tilt angle of the torsional pendulum and approximately $\theta_1 \approx \theta_2 = \theta$.
 	\end{itemize}
 \end{frame}
-% frame 4
+% frame 4 - skip
 \begin{frame}{Cavendish apparatus}
 	\framesubtitle{Approximation}
 	\begin{center}		
@@ -147,7 +142,7 @@
 		\item the net torque is proportional to the difference: $\tau_g = l d GmM[h(l)-h(-l)]\approx \frac{6l^2GmMxd} {r_0^5}$.
 	\end{itemize}
 \end{frame}
-% frame 5
+% frame 5 - skip
 \begin{frame}{Simple harmonic oscillator}
 	\framesubtitle{Gravitational measurement}
 	\begin{center}		
@@ -155,11 +150,8 @@
     \end{center}
 	\begin{itemize}
 		\item Assuming no damping force (simple harmonic motion).
-		\pause
 		\item when test mass $M$ is introduced, there are the gravitational net torque and an inverse torsional restoring torque.
-		\pause
 		\item At equilibrium, the torques cancel each other out $\tau_g =  \kappa\theta$.
-		\pause
 		\item The average equilibrium angle: $\overline{\theta} = \frac{\tau_g}{\kappa} \approx \frac{3GT^2cos\theta sin\theta}{4\pi^2 } \cdot \frac{M}{r_0^3}$.
 		
 	\end{itemize}
