--- a/Presentation.tex
+++ b/Presentation.tex
@@ -113,20 +113,21 @@
 		\pause
 		\item Mass $M$ attracts both masses $m$; creating a net gravitational torque.
 		\item There are both gravitational torque and a restoring torque.
+		\pause
 		\item The average equilibrium angle: $\overline{\theta} = \frac{\tau_g}{\kappa} \approx \frac{3GT^2cos\theta sin\theta}{4\pi^2 } \cdot \frac{M}{r_0^3}$.
 
 	\end{itemize}
 \end{frame}
 % frame 3 - skip
 \begin{frame}{Cavendish apparatus}
-\framesubtitle{Measurement}
+\framesubtitle{Net torque}
 	\begin{center}		
 		\includegraphics[width=0.25\textwidth,keepaspectratio]{Cavendish apparatus.PNG}
     \end{center}
 	\begin{itemize}
-		\item The net gravitational torque is the sum of the two torques, one from each mass: $\tau_g = l \cdot F(r_1) \cdot cos\theta_1 - l \cdot F(r_2) \cdot cos\theta_2$
+		\item The net gravitational torque is the sum inverse torques, one from each mass: $\tau_g = l \cdot F(r_1) \cdot cos\theta_1 - l \cdot F(r_2) \cdot cos\theta_2$
 		\item If $l<<d,x,r_0$ the net torque can be approximated to: $\tau_g =  \frac{6l^2GmMxd} {r_0^5} = \frac{6l^2GmM sin\theta cos\theta}{r_0^3}$
-		\item Where $\theta$ is the tilt angle of the torsional pendulum and approximately $\theta_1 \approx \theta_2 = \theta$.
+		\item Where the tilt angle is $\theta_1 \approx \theta_2 \approx \theta$.
 	\end{itemize}
 \end{frame}
 % frame 4 - skip
