--- a/Presentation.tex
+++ b/Presentation.tex
@@ -151,7 +151,6 @@
     \end{center}
 	\begin{itemize}
 		\item Assuming no damping force (simple harmonic motion).
-		\item when test mass $M$ is introduced, there are the gravitational net torque and an inverse torsional restoring torque.
 		\item At equilibrium, the torques cancel each other out $\tau_g =  \kappa\theta$.
 		\item The average equilibrium angle: $\overline{\theta} = \frac{\tau_g}{\kappa} \approx \frac{3GT^2cos\theta sin\theta}{4\pi^2 } \cdot \frac{M}{r_0^3}$.
 		
@@ -163,7 +162,7 @@
 	
 	\begin{itemize}
 		
-		\item The sensor's tilt angle is measured at each frequency, measuring the energy spectral density $[\frac{rad}{\sqrt{Hz}}]$ of the sensor.
+		\item The tilt angle is measured at each frequency, measuring the sensor's spectral density.
 		\pause
 		\item By integrating over long periods, measurement noises are reduced. The signal to noise ratio (SNR) is the limiting factor for the sensitivity of a measuring system.
 		\pause
