--- a/Presentation.tex
+++ b/Presentation.tex
@@ -161,10 +161,8 @@
 	
 	
 	\begin{itemize}
-		
-		\item The tilt angle is measured at each frequency, measuring the sensor's spectral density.
-		\pause
-		\item By integrating over long periods, measurement noises are reduced. The signal to noise ratio (SNR) is the limiting factor for the sensitivity of a measuring system.
+		\item SNR is the limiting factor for the measurement sensitivity.
+		\item Integration reduces measurement noises. 
 		\pause
 		\item At higher frequencies the integration is faster, reducing more noises and having higher SNR.
 		\pause
