--- a/Presentation.tex
+++ b/Presentation.tex
@@ -162,9 +162,9 @@
 	
 	\begin{itemize}
 		\item SNR is the limiting factor for the measurement sensitivity.
-		\item Integration reduces measurement noises. 
+		\item Time integration reduces measurement noises. 
 		\pause
-		\item At higher frequencies the integration is faster, reducing more noises and having higher SNR.
+		\item Integration at high frequencies is faster, reducing more noise.
 		\pause
 		\item The SNR dependency on frequency is a significant challenge while designing gravimetric sensors for low frequencies.
 
