--- a/Presentation.tex
+++ b/Presentation.tex
@@ -164,7 +164,7 @@
 		\item SNR is the limiting factor for the measurement sensitivity.
 		\item Time integration reduces measurement noises. 
 		\pause
-		\item Integration at high frequencies is faster, reducing more noise.
+		\item Integration at high frequencies is faster, achieving higher SNR.
 		\pause
 		\item The SNR dependency on frequency is a significant challenge while designing gravimetric sensors for low frequencies.
 
