--- a/Presentation.tex
+++ b/Presentation.tex
@@ -164,9 +164,9 @@
 		\item SNR is the limiting factor for the measurement sensitivity.
 		\item Time integration reduces measurement noises. 
 		\pause
-		\item Integration at high frequencies is faster, achieving higher SNR.
+		\item Integration at high frequencies is faster, with better SNR.
 		\pause
-		\item The SNR dependency on frequency is a significant challenge while designing gravimetric sensors for low frequencies.
+		\item SNR dependency on frequency is a significant challenge while designing gravimetric sensors for low frequencies.
 
 	\end{itemize}
 \end{frame}
