--- a/Presentation.tex
+++ b/Presentation.tex
@@ -161,12 +161,11 @@
 	
 	
 	\begin{itemize}
-		\item SNR is the limiting factor for the measurement sensitivity.
 		\item Time integration reduces measurement noises. 
+		\item SNR is the limiting factor for the measurement sensitivity.		
 		\pause
-		\item Integration at high frequencies is faster, with better SNR.
-		\pause
-		\item SNR dependency on frequency is a significant challenge while designing gravimetric sensors for low frequencies.
+		\item Integration at high frequencies is faster with better SNR.
+		\item SNR frequency dependency is a significant challenge while designing gravimetric sensors for low frequencies.
 
 	\end{itemize}
 \end{frame}
