--- a/Presentation.tex
+++ b/Presentation.tex
@@ -165,7 +165,7 @@
 		\item SNR is the limiting factor for the measurement sensitivity.		
 		\pause
 		\item Integration at high frequencies is faster with better SNR.
-		\item SNR frequency dependency is a significant challenge while designing gravimetric sensors for low frequencies.
+		\item SNR frequency dependency is a significant challenge with low frequency gravimetric sensing.
 
 	\end{itemize}
 \end{frame}
