--- a/Presentation.tex
+++ b/Presentation.tex
@@ -77,6 +77,7 @@
 
 % frame 3 - skip
 \begin{frame}{Damped oscillator}
+	\framesubtitle{Study achievements}
 	\begin{center}		
 		\includegraphics[width=0.5\textwidth,keepaspectratio]{damp.png}
     \end{center}
@@ -157,7 +158,7 @@
 	\end{itemize}
 \end{frame}
 % frame 6
-\begin{frame}{Gravity sensing}
+\begin{frame}{Gravimetric sensing}
 	
 	
 	\begin{itemize}
