--- a/Presentation.tex
+++ b/Presentation.tex
@@ -77,7 +77,7 @@
 
 % frame 3 - skip
 \begin{frame}{Damped oscillator}
-	\framesubtitle{Study achievements}
+	\framesubtitle{Damped equation}
 	\begin{center}		
 		\includegraphics[width=0.5\textwidth,keepaspectratio]{damp.png}
     \end{center}
@@ -105,7 +105,6 @@
 \end{frame}
 % frame 2
 \begin{frame}{Cavendish apparatus}
-\framesubtitle{Cavendish apparatus}
 	\begin{center}		
 		\includegraphics[width=0.25\textwidth,keepaspectratio]{Cavendish apparatus.PNG}
     \end{center}
@@ -121,7 +120,7 @@
 \end{frame}
 % frame 3 - skip
 \begin{frame}{Cavendish apparatus}
-\framesubtitle{Net torque}
+	\framesubtitle{Net torque}
 	\begin{center}		
 		\includegraphics[width=0.25\textwidth,keepaspectratio]{Cavendish apparatus.PNG}
     \end{center}
@@ -145,8 +144,8 @@
 	\end{itemize}
 \end{frame}
 % frame 5 - skip
-\begin{frame}{Simple harmonic oscillator}
-	\framesubtitle{Gravitational measurement}
+\begin{frame}{Cavendish apparatus}
+	\framesubtitle{Simple harmonic oscillator}
 	\begin{center}		
 		\includegraphics[width=0.25\textwidth,keepaspectratio]{Cavendish apparatus.PNG}
     \end{center}
