--- a/Presentation.tex
+++ b/Presentation.tex
@@ -174,7 +174,7 @@
 \subsection{Environment affects}
 \begin{frame}{Ideal gas}
 	\begin{itemize}
-		\item An ideal gas is a theoretical gas composed of gas particles without inter-particle interactions: $PV =  N k_B T $.
+		\item Ideal gas is gas with negligible inter-particle interactions: $PV =  N k_B T $.
 		\item The torsional pendulum interacts with an ideal gas environment, causing pressure-dependent noise and friction.
 		\pause
 		\item At higher pressures (gas with turbulent flow), drag force is $F = -b(P)\cdot v^2 $.
