--- a/Presentation.tex
+++ b/Presentation.tex
@@ -174,8 +174,8 @@
 \subsection{Environment affects}
 \begin{frame}{Ideal gas}
 	\begin{itemize}
-		\item Ideal gas is gas with negligible inter-particle interactions: $PV =  N k_B T $.
-		\item The torsional pendulum interacts with an ideal gas environment, causing pressure-dependent noise and friction.
+		\item Ideal gas is gas with negligible inter-particle interactions.
+		\item The pendulum interacts with an ideal gas, causing pressure-dependent noise and friction.
 		\pause
 		\item At higher pressures (gas with turbulent flow), drag force is $F = -b(P)\cdot v^2 $.
 		\item At lower pressures (gas with laminar flow), the drag force is given by Stokes' law: $F_{drag} =  -b(P)\cdot v$.
