--- a/Presentation.tex
+++ b/Presentation.tex
@@ -175,8 +175,8 @@
 \begin{frame}{Ideal gas}
 	\begin{itemize}
 		\item Ideal gas is gas with negligible inter-particle interactions.
-		\item The pendulum interacts with an ideal gas, causing pressure-dependent noise and friction.
-		\item There is also environmental black body radiation.
+		\item The pendulum interacts with an ideal gas, causing pressure-dependent friction and noises (Brownian motion, acoustic waves, thermal flow).
+		\item There is also noise from environmental black body radiation.
 		\pause
 		\item At higher pressures (gas with turbulent flow), drag force is $F = -b(P)\cdot v^2 $.
 		\item At lower pressures (gas with laminar flow), the drag force is given by Stokes' law: $F_{drag} =  -b(P)\cdot v$.
