--- a/Presentation.tex
+++ b/Presentation.tex
@@ -176,7 +176,7 @@
 	\begin{itemize}
 		\item Ideal gas is gas with negligible inter-particle interactions.
 		\item The pendulum interacts with an ideal gas, causing pressure-dependent friction and noises (Brownian motion, acoustic waves, thermal flow).
-		\item There is also noise from environmental black body radiation.
+		\item Noise from environmental black body radiation.
 		\pause
 		\item At higher pressures (gas with turbulent flow), drag force is $F = -b(P)\cdot v^2 $.
 		\item At lower pressures (gas with laminar flow), the drag force is given by Stokes' law: $F_{drag} =  -b(P)\cdot v$.
