--- a/Presentation.tex
+++ b/Presentation.tex
@@ -175,7 +175,8 @@
 \begin{frame}{Ideal gas}
 	\begin{itemize}
 		\item Ideal gas is gas with negligible inter-particle interactions.
-		\item The pendulum interacts with an ideal gas, causing pressure-dependent friction and noises (Brownian motion, acoustic waves, thermal flow).
+		\item The interaction results with pressure-dependent noises and friction.  
+		\item (Brownian motion, acoustic waves, thermal flow).
 		\item Noise from environmental black body radiation.
 		\pause
 		\item At higher pressures (gas with turbulent flow), drag force is $F = -b(P)\cdot v^2 $.
