--- a/Presentation.tex
+++ b/Presentation.tex
@@ -177,6 +177,7 @@
 		\item Ideal gas is gas with negligible inter-particle interactions.
 		\item Interaction results with pressure-dependent friction and noises (Brownian motion, acoustic waves, thermal flow).  
 		\item Noise from environmental black body radiation.
+		\item Unknown Magnetic noise from electronics.
 		\pause
 		\item At higher pressures (gas with turbulent flow), drag force is $F = -b(P)\cdot v^2 $.
 		\item At lower pressures (gas with laminar flow), the drag force is given by Stokes' law: $F_{drag} =  -b(P)\cdot v$.
