--- a/Presentation.tex
+++ b/Presentation.tex
@@ -171,21 +171,19 @@
 \end{frame}
 
 
-\subsection{Environment affects}
-\begin{frame}{Ideal gas}
+\subsection{Noises}
+\begin{frame}{Environmental noises}
 	\begin{itemize}
-		\item Ideal gas is gas with negligible inter-particle interactions.
+		\item AN ideal gas is with negligible inter-particle interactions.
 		\item Interaction results with pressure-dependent friction and noises (Brownian motion, acoustic waves, thermal flow).  
 		\item Noise from environmental black body radiation.
 		\item Unknown Magnetic noise from electronics.
-		\pause
-		\item At higher pressures (gas with turbulent flow), drag force is $F = -b(P)\cdot v^2 $.
-		\item At lower pressures (gas with laminar flow), the drag force is given by Stokes' law: $F_{drag} =  -b(P)\cdot v$.
-		
+			
 	\end{itemize}
 \end{frame}
 
 \begin{frame}{Environmental noises}
+	\framesubtitle{Noises}
 	\begin{itemize}
 		
 		\item Brownian motion causes random particles' fluctuations at thermal equilibrium in a given temperature. The kinetic energy of the gas particles: $ N<E_k> = \frac{3}{2} PV$.
@@ -193,6 +191,16 @@
 		\item Heat flow is the exchange of thermal energy between physical systems. The net power is: $p= A P c_v \Delta T \sqrt{\frac{M}{RT}} $.
 		\pause
 		\item The net absorbed power due to environment black body radiation is $p= A \sigma\epsilon[ T^4- T_0^4]$.
+		
+	\end{itemize}
+\end{frame}
+\begin{frame}{Environmental noises}
+	\framesubtitle{Friction}
+	\begin{itemize}
+		
+		\pause
+		\item At higher pressures (gas with turbulent flow), drag force is $F = -b(P)\cdot v^2 $.
+		\item At lower pressures (gas with laminar flow), the drag force is given by Stokes' law: $F_{drag} =  -b(P)\cdot v$.	
 		
 	\end{itemize}
 \end{frame}
