--- a/Presentation.tex
+++ b/Presentation.tex
@@ -171,10 +171,10 @@
 \end{frame}
 
 
-\subsection{Noises}
+\subsection{Noises and damping}
 \begin{frame}{Environmental noises}
 	\begin{itemize}
-		\item AN ideal gas is with negligible inter-particle interactions.
+		\item An ideal gas has negligible inter-particle interactions.
 		\item Interaction results with pressure-dependent friction and noises (Brownian motion, acoustic waves, thermal flow).  
 		\item Noise from environmental black body radiation.
 		\item Unknown Magnetic noise from electronics.
@@ -183,14 +183,15 @@
 \end{frame}
 
 \begin{frame}{Environmental noises}
-	\framesubtitle{Noises}
+	\framesubtitle{Pressure-dependent noises}
 	\begin{itemize}
 		
-		\item Brownian motion causes random particles' fluctuations at thermal equilibrium in a given temperature. The kinetic energy of the gas particles: $ N<E_k> = \frac{3}{2} PV$.
+		\item Brownian motion cause random collisions in a given temperature and pressure. 
+		\item The kinetic energy of the gas particles: $ N<E_k> = \frac{3}{2} PV$.
 		\item Acoustic waves are adiabatic waves propagating through a material. The average power at room temperature $p  \approx 1\cdot10^{-22}AP^2$.
 		\item Heat flow is the exchange of thermal energy between physical systems. The net power is: $p= A P c_v \Delta T \sqrt{\frac{M}{RT}} $.
 		\pause
-		\item The net absorbed power due to environment black body radiation is $p= A \sigma\epsilon[ T^4- T_0^4]$.
+		%\item The net absorbed power due to environment black body radiation is $p= A \sigma\epsilon[ T^4- T_0^4]$.
 		
 	\end{itemize}
 \end{frame}
