--- a/Presentation.tex
+++ b/Presentation.tex
@@ -188,7 +188,7 @@
 		
 		\item Brownian motion cause random collisions. 
 		\item The kinetic energy of the gas particles: $ N<E_k> = \frac{3}{2} PV$.
-		\item Acoustic waves are adiabatic waves propagating with power of $p  \approx 1\cdot10^{-22}AP^2$.
+		\item Acoustic waves are propagating with power of $1\cdot10^{-22}AP^2$.
 		\item Heat flow is the exchange of thermal energy between physical systems. The net power is: $p= A P c_v \Delta T \sqrt{\frac{M}{RT}} $.
 		\pause
 		%\item The net absorbed power due to environment black body radiation is $p= A \sigma\epsilon[ T^4- T_0^4]$.
