--- a/Presentation.tex
+++ b/Presentation.tex
@@ -185,6 +185,47 @@
 	\end{itemize}
 \end{frame}
 
+
+
+
+\subsection{Noises and damping}
+% frame 1
+\begin{frame}{Environmental noises}
+	\begin{itemize}
+		\item An ideal gas has negligible inter-particle interactions.
+		\item Interaction results with pressure-dependent friction and noises (Brownian motion, acoustic waves, thermal flow).  
+		\item Noise from environmental black body radiation.
+		\item Unknown Magnetic noise from electronics.
+			
+	\end{itemize}
+\end{frame}
+% frame 6
+\begin{frame}{Environmental noises}
+	\framesubtitle{Pressure and temperature dependent noises}
+	\begin{itemize}
+		
+		\item Brownian motion cause random collisions. 
+		\item The kinetic energy of the gas particles: $ N<E_k> = \frac{3}{2} PV$.
+		\item Acoustic waves are propagating with power of $10^{-22}AP^2$.
+		\item Heat flow is the exchange of thermal energy between physical systems. The net power is: $p= A P c_v \Delta T \sqrt{\frac{M}{RT}} $.
+		\pause
+		\item The net absorbed power due to environment black body radiation is $p= A \sigma\epsilon[ T^4- T_0^4]$.
+		
+	\end{itemize}
+\end{frame}
+
+
+
+
+
+
+
+
+
+
+
+
+
 \begin{frame}{Environmental noises}
 	\begin{itemize}
 		
