--- a/Presentation.tex
+++ b/Presentation.tex
@@ -192,7 +192,7 @@
 		\item Acoustic waves are propagating with power of $10^{-22}AP^2$.
 		\item Heat flow is the exchange of thermal energy between physical systems. The net power is: $p= A P c_v \Delta T \sqrt{\frac{M}{RT}} $.
 		\pause
-		\item The net absorbed power due to environment black body radiation is $p= A \sigma\epsilon[ T^4- T_0^4]$.
+		\item Net power from black body radiation is $p= A \sigma\epsilon[ T^4- T_0^4]$.
 		
 	\end{itemize}
 \end{frame}
