--- a/Presentation.tex
+++ b/Presentation.tex
@@ -202,7 +202,7 @@
 	\begin{itemize}
 		\item Friction decreases with pressure, causing negligible damping,		
 		\pause
-		\item At higher pressures (gas with turbulent flow), drag force is $F = -b(P)\cdot v^2 $.
+		\item At higher pressures (turbulent flow); drag force of $ -b(P)\cdot v^2 $.
 		\item At lower pressures (gas with laminar flow), the drag force is given by Stokes' law: $F_{drag} =  -b(P)\cdot v$.	
 		
 	\end{itemize}
