--- a/Presentation.tex
+++ b/Presentation.tex
@@ -200,9 +200,9 @@
 \begin{frame}{Environmental noises}
 	\framesubtitle{Friction}
 	\begin{itemize}
-		\item Friction decreases with pressure, causing negligible damping,		
+		\item Friction caused by drag force decreases with pressure.		
 		\pause
-		\item At higher pressures (turbulent flow); drag force of $ -b(P)\cdot v^2 $.
+		\item At higher pressures (turbulent flow); $F = -b(P)\cdot v^2 $.
 		\item At lower pressures (gas with laminar flow), the drag force is given by Stokes' law: $F_{drag} =  -b(P)\cdot v$.	
 		
 	\end{itemize}
