--- a/Presentation.tex
+++ b/Presentation.tex
@@ -200,7 +200,7 @@
 \begin{frame}{Environmental noises}
 	\framesubtitle{Friction}
 	\begin{itemize}
-		\item Friction caused by drag force decreases with pressure.		
+		\item Friction, caused by drag force, decreases with pressure.		
 		\pause
 		\item At higher pressures (turbulent flow); $F = -b(P)\cdot v^2 $.
 		\item At lower pressures (gas with laminar flow), the drag force is given by Stokes' law: $F_{drag} =  -b(P)\cdot v$.	
