--- a/Presentation.tex
+++ b/Presentation.tex
@@ -182,7 +182,7 @@
 			
 	\end{itemize}
 \end{frame}
-% frame 6
+% frame 2 - skip
 \begin{frame}{Environmental noises}
 	\framesubtitle{Pressure and temperature dependent noises}
 	\begin{itemize}
@@ -196,7 +196,7 @@
 		
 	\end{itemize}
 \end{frame}
-% frame 6
+% frame 3 - skip
 \begin{frame}{Environmental noises}
 	\framesubtitle{Friction}
 	\begin{itemize}
@@ -214,7 +214,7 @@
     \end{center}
 	\begin{itemize}	
 		\item PID controller is a feedback based control system, for time continuous control of a process.
-		\item The PID continuously calculates error value $e(t)$ from the defined set point. 
+		\item The controller continuously calculates error from defined set point. 
 		\pause
 		\item The feedback applies an external correction to the process.
 		\item The control is based on a proportional, integral and derivative response to the error (P-I-D).
