--- a/Presentation.tex
+++ b/Presentation.tex
@@ -214,7 +214,7 @@
     \end{center}
 	\begin{itemize}	
 		\item PID controller is a feedback based control system, for time continuous control of a process.
-		\item The controller continuously calculates error from defined set point. 
+		\item The controller continuously calculates error from set point. 
 		\pause
 		\item The feedback applies an external correction to the process.
 		\item The control is based on a proportional, integral and derivative response to the error (P-I-D).
