--- a/Presentation.tex
+++ b/Presentation.tex
@@ -230,7 +230,7 @@
 		\item The output is a weighted sum of the response terms.
 		\item $u(t) = K_P e(t)+K_I\int_{0}^{t}e(\tau)d\tau+K_D\frac{de(t)}{dt}$
 		\pause
-		\item Over time controller minimizes the error by adjusting the output.
+		\item Over time controller minimizes the error with adjusted output.
 	\end{itemize}
 \end{frame}
 \begin{frame}{Radiation-pressure}
