--- a/Presentation.tex
+++ b/Presentation.tex
@@ -216,7 +216,6 @@
 		\item PID controller is a feedback based control system, for time continuous control of a process.
 		\item The controller continuously calculates error from set point. 
 		\pause
-		\item The feedback applies an external correction to the process.
 		\item The control is based on a proportional, integral and derivative response to the error (P-I-D).
 	\end{itemize}
 \end{frame}
@@ -225,12 +224,14 @@
 	\begin{center}		
 		\includegraphics[width=0.6\textwidth,keepaspectratio]{pid_diagram_powerpoint.jpg}
     \end{center}
-	\begin{itemize}	
+	\begin{itemize}
+	
 		\item Each response is assigned to a tunable gain. 
 		\item The output is a weighted sum of the response terms.
-		\item $u(t) = K_P e(t)+K_I\int_{0}^{t}e(\tau)d\tau+K_D\frac{de(t)}{dt}$
+		%\item $u(t) = K_P e(t)+K_I\int_{0}^{t}e(\tau)d\tau+K_D\frac{de(t)}{dt}$
 		\pause
-		\item Over time controller minimizes the error with adjusted output.
+		\item The feedback applies an external correction to the process.	
+		\item Over time controller minimizes the error.
 	\end{itemize}
 \end{frame}
 \begin{frame}{Radiation-pressure}
