--- a/Presentation.tex
+++ b/Presentation.tex
@@ -226,7 +226,7 @@
     \end{center}
 	\begin{itemize}
 	
-		\item Each response is assigned to a tunable gain. 
+		\item Each response is modulated by a tunable gain. 
 		\item The output is a weighted sum of the response terms.
 		%\item $u(t) = K_P e(t)+K_I\int_{0}^{t}e(\tau)d\tau+K_D\frac{de(t)}{dt}$
 		\pause
