--- a/Presentation.tex
+++ b/Presentation.tex
@@ -231,7 +231,7 @@
 		%\item $u(t) = K_P e(t)+K_I\int_{0}^{t}e(\tau)d\tau+K_D\frac{de(t)}{dt}$
 		\pause
 		\item The feedback applies an external correction to the process.	
-		\item Over time controller minimizes the error.
+		\item Over time controller minimizes the error by damping the process.
 	\end{itemize}
 \end{frame}
 \begin{frame}{Radiation-pressure}
