--- a/Presentation.tex
+++ b/Presentation.tex
@@ -234,10 +234,10 @@
 		\item Over time error is minimized (damped motion).
 	\end{itemize}
 \end{frame}
-\begin{frame}{Radiation-pressure}
+\begin{frame}{Radiation-pressure tourqe}
 	\begin{itemize}
 		
-		\item The pressure of a light beam on the surface due to momentum exchange with the electromagnetic field.
+		\item Incident light beam causes pressure on the surface, due to momentum exchange with the electromagnetic field.
 		\pause
 		\item The radiation-pressure force depends on the surface angle relative to the field propagation direction, the surface reflectance and absorbance, and the hitting light power.
 		\pause
