--- a/Presentation.tex
+++ b/Presentation.tex
@@ -237,9 +237,9 @@
 \begin{frame}{Radiation-pressure tourqe}
 	\begin{itemize}
 		
-		\item Incident light beam causes pressure on the surface, due to momentum exchange with the electromagnetic field.
+		\item Incident light beam causes force on the surface, due to momentum exchange with the electromagnetic field.
 		\pause
-		\item The radiation-pressure force depends on the surface angle relative to the field propagation direction, the surface reflectance and absorbance, and the hitting light power.
+		\item The force depend on the relative angle, surface reflectance and absorbance and the light power.
 		\pause
 		\item When the light field direction is perpendicular to a reflective surface the radiation force is: $F  \approx\frac{2\eta\Theta_{source}}{{c}} $.
 		\pause
