--- a/Presentation.tex
+++ b/Presentation.tex
@@ -239,9 +239,9 @@
 		
 		\item Incident light beam causes force on the surface, due to momentum exchange with the electromagnetic field.
 		\pause
-		\item The force depend on the relative angle, surface reflectance and absorbance and the light power.
+		\item The force depend on the relative angle, surface reflectance and absorbance and the incident light power.
 		\pause
-		\item When the light field direction is perpendicular to a reflective surface the radiation force is: $F  \approx\frac{2\eta\Theta_{source}}{{c}} $.
+		\item With light perpendicular to a reflective surface; $F  \approx\frac{2\eta\Theta_{source}}{{c}} $.
 		\pause
 		\item The apparatus PID external correction is made by generating Radiation-pressure force.
 	\end{itemize}
