--- a/Presentation.tex
+++ b/Presentation.tex
@@ -241,7 +241,7 @@
 		\pause
 		\item The force depend on the relative angle, surface reflectance and absorbance and the incident light power.
 		\pause
-		\item With light perpendicular to a reflective surface; $F  \approx\frac{2\eta\Theta_{source}}{{c}} $.
+		\item With light perpendicular to a reflective surface $F  \approx\frac{2\eta\Theta}{{c}} $.
 		\pause
 		\item The apparatus PID external correction is made by generating Radiation-pressure force.
 	\end{itemize}
