--- a/Presentation.tex
+++ b/Presentation.tex
@@ -234,15 +234,20 @@
 		\item Over time error is minimized (damped motion).
 	\end{itemize}
 \end{frame}
-\begin{frame}{Radiation-pressure tourqe}
+\begin{frame}{Radiation-pressure force}
 	\begin{itemize}
 		
 		\item Incident light beam causes force on the surface, due to momentum exchange with the electromagnetic field.
-		\pause
 		\item The force depend on the relative angle, surface reflectance and absorbance and the incident light power.
 		\pause
 		\item With light perpendicular to a reflective surface $F  \approx\frac{2\eta\Theta}{{c}} $.
-		\pause
+		
+	\end{itemize}
+\end{frame}
+\begin{frame}{Damping tourqe }
+	\begin{itemize}
+		
+		
 		\item The apparatus PID external correction is made by generating Radiation-pressure force.
 	\end{itemize}
 \end{frame}
