--- a/Presentation.tex
+++ b/Presentation.tex
@@ -207,7 +207,7 @@
 		
 	\end{itemize}
 \end{frame}
-
+% frame 4
 \begin{frame}{Proportional–integral–derivative (PID) controller}
 	\begin{center}		
 		\includegraphics[width=0.6\textwidth,keepaspectratio]{pid_diagram_powerpoint.jpg}
@@ -219,8 +219,8 @@
 		\item The control is based on a proportional, integral and derivative response to the error (P-I-D).
 	\end{itemize}
 \end{frame}
-
-\begin{frame}{Proportional–integral–derivative (PID) controller}
+% frame 3
+\begin{frame}{PID response}
 	\begin{center}		
 		\includegraphics[width=0.6\textwidth,keepaspectratio]{pid_diagram_powerpoint.jpg}
     \end{center}
