--- a/Presentation.tex
+++ b/Presentation.tex
@@ -175,14 +175,14 @@
 % frame 1
 \begin{frame}{Environmental noises}
 	\begin{center}		
-		\includegraphics[width=0.6\textwidth,keepaspectratio]{pid_diagram_powerpoint.jpg}
+		\includegraphics[width=0.6\textwidth,keepaspectratio]{total_chamber.png}
     \end{center}
 	\begin{itemize}
 		\item An ideal gas has negligible inter-particle interactions.
 		\item Interaction results with pressure-dependent friction and noises (Brownian motion, acoustic waves, thermal flow).  
 		\item Noise from environmental black body radiation.
 		\item Unknown Magnetic noise from electronics.
-		\item Reduced noise by placing system inside a vacuum chamber and acoustic box. 
+		\item System placed inside a vacuum chamber and acoustic box. 
 			
 	\end{itemize}
 \end{frame}
