--- a/Presentation.tex
+++ b/Presentation.tex
@@ -178,8 +178,8 @@
 		\includegraphics[width=0.4\textwidth,keepaspectratio]{total_chamber.png}
     \end{center}
 	\begin{itemize}
-		\item An ideal gas has negligible inter-particle interactions.
-		\item Interaction results with pressure-dependent friction and noises (Brownian motion, acoustic waves, thermal flow).  
+		
+		\item Interactions results with pressure-dependent friction and noises (Brownian motion, acoustic waves, thermal flow).  
 		\item Noise from environmental black body radiation.
 		\item Unknown Magnetic noise from electronics.
 		\item System placed inside a vacuum chamber and acoustic box. 
@@ -190,7 +190,7 @@
 \begin{frame}{Environmental noises}
 	\framesubtitle{Pressure and temperature dependent noises}
 	\begin{itemize}
-		
+		\item An ideal gas has negligible inter-particle interactions.
 		\item Brownian motion cause random collisions. 
 		\item The kinetic energy of the gas particles: $ N<E_k> = \frac{3}{2} PV$.
 		\item Acoustic waves are propagating with power of $10^{-22}AP^2$.
