--- a/Presentation.tex
+++ b/Presentation.tex
@@ -179,7 +179,7 @@
     \end{center}
 	\begin{itemize}
 		
-		\item Interactions results with pressure-dependent friction and noises (Brownian motion, acoustic waves, thermal flow).  
+		\item Environment cause pressure-dependent friction and noises (Brownian motion, acoustic waves, thermal flow).  
 		\item Noise from environmental black body radiation.
 		\item Unknown Magnetic noise from electronics.
 		\item System placed inside a vacuum chamber and acoustic box. 
