--- a/Presentation.tex
+++ b/Presentation.tex
@@ -182,6 +182,7 @@
 		\item Environment cause pressure-dependent friction and noises (Brownian motion, acoustic waves, thermal flow).  
 		\item Noise from environmental black body radiation.
 		\item Unknown Magnetic noise from electronics.
+		\pause
 		\item System placed inside a vacuum chamber and acoustic box. 
 			
 	\end{itemize}
@@ -195,7 +196,6 @@
 		\item The kinetic energy of the gas particles: $ N<E_k> = \frac{3}{2} PV$.
 		\item Acoustic waves are propagating with power of $10^{-22}AP^2$.
 		\item Heat flow is the exchange of thermal energy between physical systems. The net power is: $p= A P c_v \Delta T \sqrt{\frac{M}{RT}} $.
-		\pause
 		\item Net power from black body radiation is $p= A \sigma\epsilon[ T^4- T_0^4]$.
 		
 	\end{itemize}
@@ -237,14 +237,14 @@
 		\item Over time error is minimized (damped motion).
 	\end{itemize}
 \end{frame}
-\begin{frame}{Radiation-pressure force}
+\begin{frame}{Radiation-pressure tourqe}
 	\begin{itemize}
 		
 		\item Incident light beam causes force on the surface, due to momentum exchange with the electromagnetic field.
 		\item The force depend on the relative angle, surface reflectance and absorbance and the incident light power.
 		\pause
 		\item With light perpendicular to a reflective surface $F  \approx\frac{2\eta\Theta}{{c}} $.
-		\item Force is modulated by light power modulation.
+		\item Modulated light source results with a modulated tourqe.
 		
 	\end{itemize}
 \end{frame}
