--- a/Presentation.tex
+++ b/Presentation.tex
@@ -241,7 +241,7 @@
 	\begin{itemize}
 		
 		\item Incident light beam causes force on the surface, due to momentum exchange with the electromagnetic field.
-		\item The force depend on the relative angle, surface reflectance and absorbance and the incident light power.
+		%\item The force depend on the relative angle, surface reflectance and absorbance and the incident light power.
 		\pause
 		\item With light perpendicular to a reflective surface $F  \approx\frac{2\eta\Theta}{{c}} $.
 		\item Modulated light source results with a modulated tourqe.
@@ -250,8 +250,8 @@
 \end{frame}
 \begin{frame}{Damping tourqe }
 	\begin{itemize}
-		\item difference between two light sources in front of the two torsional pendulum sides.
-		\item the difference between two torques adds an external net torque
+		\item Difference between two light sources adds an external net torque.
+		
 		\item The radiation-pressure net torque is controlled by changing the difference between the light sources' flux
 		
 		
