--- a/Presentation.tex
+++ b/Presentation.tex
@@ -237,25 +237,27 @@
 		\item Over time error is minimized (damped motion).
 	\end{itemize}
 \end{frame}
-\begin{frame}{Radiation-pressure tourqe}
+\begin{frame}{Radiation tourqe}
 	\begin{itemize}
-		
+		\item Vacuum chamber is designed with two transparent windows allowing incident light.
+		\pause
 		\item Incident light beam causes force on the surface, due to momentum exchange with the electromagnetic field.
 		%\item The force depend on the relative angle, surface reflectance and absorbance and the incident light power.
 		\pause
 		\item With light perpendicular to a reflective surface $F  \approx\frac{2\eta\Theta}{{c}} $.
-		\item Modulated light source results with a modulated tourqe.
+		\item Two modulated light source results with a modulated net tourqe.
 		
 	\end{itemize}
 \end{frame}
 \begin{frame}{Damping tourqe }
 	\begin{itemize}
+		 
 		\item Difference between two light sources adds an external net torque.
 		
 		\item The radiation-pressure net torque is controlled by changing the difference between the light sources' flux
 		
 		
-		\item The PID external correction is made by generating Radiation-pressure force.
+		\item The PID external correction is made by generating radiation net torque.
 	\end{itemize}
 \end{frame}
 \section{Thesis aims}
