--- a/Presentation.tex
+++ b/Presentation.tex
@@ -245,7 +245,7 @@
 		%\item The force depend on the relative angle, surface reflectance and absorbance and the incident light power.
 		\pause
 		\item With light perpendicular to a reflective surface $F  \approx\frac{2\eta\Theta}{{c}} $.
-		\item Two modulated light source results with a modulated net tourqe.
+		\item Light sources result with a modulated net tourqe.
 		
 	\end{itemize}
 \end{frame}
