--- a/Presentation.tex
+++ b/Presentation.tex
@@ -238,7 +238,10 @@
 	\end{itemize}
 \end{frame}
 \begin{frame}{Radiation tourqe}
-	\begin{itemize}
+	\begin{center}		
+		\includegraphics[width=0.45\textwidth,keepaspectratio]{total_chamber.png}
+	\end{center}
+	\begin{itemize}		
 		\item Vacuum chamber is designed with two transparent windows allowing incident light.
 		\pause
 		\item Incident light beam causes force on the surface, due to momentum exchange with the electromagnetic field.
