--- a/Presentation.tex
+++ b/Presentation.tex
@@ -239,10 +239,10 @@
 \end{frame}
 \begin{frame}{Radiation tourqe}
 	\begin{center}		
-		\includegraphics[width=0.45\textwidth,keepaspectratio]{total_chamber.png}
+		\includegraphics[width=0.4\textwidth,keepaspectratio]{total_chamber.png}
 	\end{center}
 	\begin{itemize}		
-		\item Vacuum chamber is designed with two transparent windows allowing incident light.
+		\item Vacuum chamber is designed with two transparent windows.
 		\pause
 		\item Incident light beam causes force on the surface, due to momentum exchange with the electromagnetic field.
 		%\item The force depend on the relative angle, surface reflectance and absorbance and the incident light power.
