--- a/Presentation.tex
+++ b/Presentation.tex
@@ -242,7 +242,7 @@
 		\includegraphics[width=0.4\textwidth,keepaspectratio]{total_chamber.png}
 	\end{center}
 	\begin{itemize}		
-		\item Vacuum chamber is designed with two transparent windows.
+		\item Vacuum chamber is designed with two transparent windows with light sources in front.
 		\pause
 		\item Incident light beam causes force on the surface, due to momentum exchange with the electromagnetic field.
 		%\item The force depend on the relative angle, surface reflectance and absorbance and the incident light power.
