--- a/Presentation.tex
+++ b/Presentation.tex
@@ -254,11 +254,14 @@
 	\end{itemize}
 \end{frame}
 
-\section{Thesis aims}
-\begin{frame}{Cavendish experiment}
+\section{Measurement}
+\begin{frame}{Experiment noises}
+	\begin{center}		
+		\includegraphics[width=0.6\textwidth,keepaspectratio]{pid_diagram_powerpoint.jpg}
+    \end{center}
 	\begin{itemize}
 		
-		\item Optical angle measurement is made with a quadrant detector.
+		\item Angle measurement is optical.
 		\item The measurement sensitivity is limited by noise. 
 		\item Reducing the noise enables higher sensitivity.
 		\pause
