--- a/Presentation.tex
+++ b/Presentation.tex
@@ -257,7 +257,7 @@
 \section{Measurement}
 \begin{frame}{Experiment noises}
 	\begin{center}		
-		\includegraphics[width=0.6\textwidth,keepaspectratio]{pid_diagram_powerpoint.jpg}
+		\includegraphics[width=0.6\textwidth,keepaspectratio]{actual system_crop.jpg}
     \end{center}
 	\begin{itemize}
 		
