--- a/Presentation.tex
+++ b/Presentation.tex
@@ -57,7 +57,7 @@
 		\pause
 		\item Undamped oscillator; harmonic oscillations without decay.
 		\item Damped oscillator; there is also a damping torque $\tau = -b\dot{\theta}$.
-		\hyperlink{Gravity measurement}{\beamerskipbutton{skip slide}}
+		\hyperlink{frame:Gravity measurement}{\beamerskipbutton{skip slide}}
 	\end{itemize}
 \end{frame}
 % frame 2
