--- a/Presentation.tex
+++ b/Presentation.tex
@@ -10,6 +10,7 @@
 %%% we choose a sans font %%%%%%%%%%
 \usepackage{kmath,kerkis} 
 %\usepackage[default]{gfsneohellenic} 
+\usepackage{pgffor}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \usepackage{color}
@@ -57,8 +58,21 @@
 		\pause
 		\item Undamped oscillator; harmonic oscillations without decay.
 		\item Damped oscillator; there is also a damping torque $\tau = -b\dot{\theta}$.
-		\hyperlink{frame:Gravity measurement}{\beamerskipbutton{skip slide}}
+		
 	\end{itemize}
+\end{frame}
+\begin{frame}{\hypertarget{frame:A}{Frame A}}
+    \hyperlink{frame:B}{Go to Frame B} 
+\end{frame}
+
+\foreach \i in {1, ..., 10} {
+    \begin{frame}{Dummy frame}
+        \[ \i \]
+    \end{frame}
+}
+
+\begin{frame}{\hypertarget{frame:B}{Frame B}}    
+    \hyperlink{frame:A}{Go to Frame A} 
 \end{frame}
 % frame 2
 \begin{frame}{Damped oscillator}
