--- a/Presentation.tex
+++ b/Presentation.tex
@@ -5,12 +5,13 @@
 %\usepackage{babel}
 %\usepackage[utf8]{inputenc}
 
-
+%hyperlink
+\usepackage{pgffor}
 %%% FONT SELECTION %%%%%%%%%%%%%%%%%
 %%% we choose a sans font %%%%%%%%%%
 \usepackage{kmath,kerkis} 
 %\usepackage[default]{gfsneohellenic} 
-\usepackage{pgffor}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \usepackage{color}
@@ -65,11 +66,6 @@
     \hyperlink{frame:B}{Go to Frame B} 
 \end{frame}
 
-\foreach \i in {1, ..., 10} {
-    \begin{frame}{Dummy frame}
-        \[ \i \]
-    \end{frame}
-}
 
 \begin{frame}{\hypertarget{frame:B}{Frame B}}    
     \hyperlink{frame:A}{Go to Frame A} 
