--- a/Presentation.tex
+++ b/Presentation.tex
@@ -73,6 +73,7 @@
 		\pause
 		\item Driven oscillator; there is also a time-dependent torque $\tau(t)$.
 	\end{itemize}
+	\hyperlink{frame:B}{Go to Frame B} 
 \end{frame}
 
 % frame 3 - skip
