--- a/Presentation.tex
+++ b/Presentation.tex
@@ -73,7 +73,7 @@
 		\pause
 		\item Driven oscillator; there is also a time-dependent torque $\tau(t)$.
 	\end{itemize}
-	\hyperlink{frame:B}{Go to Frame B} 
+	\hyperlink{frame:B}{>>} 
 \end{frame}
 
 % frame 3 - skip
@@ -94,7 +94,7 @@
 
 \subsection{Gravity measurement}
 % frame 1
-\begin{frame}{Gravitational field}
+\begin{frame}{\hypertarget{frame:B}{Gravitational field}}
 	\begin{center}		
 		\includegraphics[width=0.3\textwidth,keepaspectratio]{gravity.png}
     \end{center}
