--- a/Presentation.tex
+++ b/Presentation.tex
@@ -118,6 +118,7 @@
 		\item The average equilibrium angle: $\overline{\theta} = \frac{\tau_g}{\kappa} \approx \frac{3GT^2cos\theta sin\theta}{4\pi^2 } \cdot \frac{M}{r_0^3}$.
 
 	\end{itemize}
+	\hyperlink{frame:Gravimetric sensing}{>>} 
 \end{frame}
 % frame 3 - skip
 \begin{frame}{Cavendish apparatus}
@@ -130,6 +131,7 @@
 		\item If $l<<d,x,r_0$ the net torque can be approximated to: $\tau_g =  \frac{6l^2GmMxd} {r_0^5} = \frac{6l^2GmM sin\theta cos\theta}{r_0^3}$
 		\item Where the tilt angle is $\theta_1 \approx \theta_2 \approx \theta$.
 	\end{itemize}
+	\hyperlink{frame:Gravimetric sensing}{>>} 
 \end{frame}
 % frame 4 - skip
 \begin{frame}{Cavendish apparatus}
@@ -143,6 +145,7 @@
 		\item If $l<<d,x,r_0$ one can approximate: $h(l)-h(-l)\approx h'(0)\cdot 2l = \frac{6lx}{r_0^5}$.
 		\item the net torque is proportional to the difference: $\tau_g = l d GmM[h(l)-h(-l)]\approx \frac{6l^2GmMxd} {r_0^5}$.
 	\end{itemize}
+	\hyperlink{frame:Gravimetric sensing}{>>} 
 \end{frame}
 % frame 5 - skip
 \begin{frame}{Cavendish apparatus}
@@ -158,8 +161,7 @@
 	\end{itemize}
 \end{frame}
 % frame 6
-\begin{frame}{Gravimetric sensing}
-	
+\begin{frame}{\hypertarget{frame:Gravimetric sensing}{Gravimetric sensing}}
 	
 	\begin{itemize}
 		\item Time integration reduces measurement noises. 
@@ -212,7 +214,7 @@
 	\end{itemize}
 \end{frame}
 % frame 4
-\begin{frame}{Radiation tourqe}
+\begin{frame}{\hypertarget{frame:Radiation tourqe}{Radiation tourqe}}
 	\begin{center}		
 		\includegraphics[width=0.4\textwidth,keepaspectratio]{total_chamber.png}
 	\end{center}
