--- a/Presentation.tex
+++ b/Presentation.tex
@@ -159,6 +159,8 @@
 		\item The average equilibrium angle: $\overline{\theta} = \frac{\tau_g}{\kappa} \approx \frac{3GT^2cos\theta sin\theta}{4\pi^2 } \cdot \frac{M}{r_0^3}$.
 		
 	\end{itemize}
+	\hyperlink{frame:Gravimetric sensing}{>>} 
+
 \end{frame}
 % frame 6
 \begin{frame}{\hypertarget{frame:Gravimetric sensing}{Gravimetric sensing}}
@@ -189,6 +191,7 @@
 		\item System placed inside a vacuum chamber and acoustic box. 
 			
 	\end{itemize}
+	\hyperlink{frame:Radiation tourqe}{>>} 
 \end{frame}
 % frame 2 - skip
 \begin{frame}{Environmental noises}
