--- a/Presentation.tex
+++ b/Presentation.tex
@@ -137,7 +137,7 @@
 \begin{frame}{Cavendish apparatus}
 	\framesubtitle{Approximation}
 	\begin{center}		
-		\includegraphics[width=0.25\textwidth,keepaspectratio]{Cavendish apparatus.PNG}
+		\includegraphics[width=0.2\textwidth,keepaspectratio]{Cavendish apparatus.PNG}
     \end{center}
 	\begin{itemize}
 		\item The net gravitational torque: $\tau_g =  l d GmM(\frac{1}{r_1^3} - \frac{1}{r_2^3})$.
@@ -205,6 +205,7 @@
 		\item Net power from black body radiation is $p= A \sigma\epsilon[ T^4- T_0^4]$.
 		
 	\end{itemize}
+	\hyperlink{frame:Radiation tourqe}{>>} 
 \end{frame}
 % frame 3 - skip
 \begin{frame}{Environmental noises}
@@ -215,6 +216,7 @@
 		\item At lower pressures (gas with laminar flow), the drag force is given by Stokes' law: $F_{drag} =  -b(P)\cdot v$.	
 		
 	\end{itemize}
+	\hyperlink{frame:Radiation tourqe}{>>} 
 \end{frame}
 % frame 4
 \begin{frame}{\hypertarget{frame:Radiation tourqe}{Radiation tourqe}}
